# GalApp

./: .gitignore  README.md  galbox_connection_e55cdfc9.json  index.html  main.js  package-lock.json  package.json  preload.js
renderer/: .env  ENV_SETUP.md  env.example  package-lock.json  package.json
renderer/public/: index.html
renderer/src/: App.css  App.js  config.js  index.css
renderer/src/components/: AppBody.css  AppBody.js
renderer/src/components/src/: AppConnections.css  AppConnections.js  AppGalaxies.css  AppGalaxies.js  ConnecttoBox.css  ConnecttoBox.js  FindIP.css  FindIP.js  README.md  tokenUtils.js
renderer/src/gui/: .dockerignore  .env  .eslintignore  .eslintrc.cjs  .prettierignore  README.md  config-overrides.js  main.cjs  package-lock.json  package.json  test.txt  tsconfig.json  webpack.config.js
renderer/src/gui/public/: index.html  manifest.json
renderer/src/gui/src/: ActionRegistry.ts  ActionStack.ts  App.scss  App.tsx  AppRegistry.ts  AppRouter.tsx  DropZone.tsx  LoginApp.scss  LoginApp.tsx  LoginGUI.scss  LoginGUI.tsx  NotFound.tsx  System.tsx  System2.tsx  endpoints.ts  (+6 more)
renderer/src/gui/src/engines/pdf/: Cargo.toml  index.ts
renderer/src/gui/src/engines/pdf/src/: lib.rs
renderer/src/gui/src/engines/pdf/src/content/: mod.rs
renderer/src/gui/src/engines/pdf/src/parser/: color.rs  content.rs  font.rs  mod.rs
renderer/src/gui/src/engines/pdf/src/renderer/: mod.rs  shaders.rs
renderer/src/gui/src/engines/pdf/src/text/: font.rs  mod.rs
renderer/src/gui/src/engines/pdf/src/viewport/: mod.rs
renderer/src/utils/: envUpdater.js
(+417 files in other folders)
